# opengl-planet-simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: Shader.h.7695899258710D9D.idx  glad.c.44769E3944B7A96A.idx  glad.c.FDE5D09E0414BFC6.idx  glad.h.3323B64F7DD7DE0C.idx  khrplatform.h.D6F62F2A674127B6.idx  main.cpp.4131B2519B6FA23A.idx  main.cpp.F260F00F9AF2A622.idx
assets/shaders/: default.frag  default.vert  gravity_well.fs  gravity_well.vs  planet.fs  planet.vs
include/: Camera.h  Celestial_Body.h  GravityWell.h  Planet.h  Settings.h  Star.h
include/Renderer/: Shader.h
include/glad/: glad.h
include/utils/: Formating.h  Geometry.h
src/: Camera.cpp  Celestial_Body.cpp  GravityWell.cpp  Planet.cpp  Star.cpp  glad.c  main.cpp
src/utils/: Formating.cpp
